<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BB2525">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/beige"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_detail_pokemon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_detail_pokemon_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/name"
                    android:textColor="@color/navy"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_pokemon_index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/index"
                    android:textColor="@color/navy"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_pokemon_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/navy"

                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/pokemon_details_string"
                    android:textColor="@color/navy"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="Type"
                            android:textColor="@color/navy"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_detail_pokemon_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Pokemon Type"
                            android:textColor="@color/navy" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="Weakness"
                            android:textColor="@color/navy"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_detail_pokemon_weakness"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Pokemon Weakness"
                            android:textColor="@color/navy" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="Height"
                            android:textColor="@color/navy"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_detail_pokemon_height"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Pokemon Height"
                            android:textColor="@color/navy" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="Weight"
                            android:textColor="@color/navy"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_detail_pokemon_weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Pokemon Weight"
                            android:textColor="@color/navy" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="Category"
                            android:textColor="@color/navy"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_detail_pokemon_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Pokemon Category"
                            android:textColor="@color/navy" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="Abilities"
                            android:textColor="@color/navy"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_detail_pokemon_abilities"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Pokemon Ability"
                            android:textColor="@color/navy" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:elevation="4dp"
                android:onClick="sharePokemonDetailss"
                android:src="@drawable/share" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
